Fix footer text alignment

--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ body {
 main p,
 main li,
 section p,
-section li,
-.container > p {
+section li {
   text-align: justify;
   text-justify: inter-word;
 }
